--- a/src/login.css
+++ b/src/login.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(255, 255, 255);
+}
+
 .login-page {
     display: flex;
     flex-direction: column;
@@ -9,12 +13,13 @@
 .title-container {
     text-align: center;
     margin: 30px auto 0;
+    /* border: 2px solid red; */
 
 }
 
 .login-container {
     width: 400px;
-    margin: 50px auto 0;
+    margin: 30px auto 0;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -22,8 +27,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center;
-    height: 40vh; */
+    justify-content: center;
+    /* height: 40vh; */
   }
   
 h2 {
@@ -51,10 +56,14 @@ button {
     border-radius: 5px;
     cursor: pointer;
     align-self: center;
+    transition: backgrounf-color 0.3s;
+    &:hover {
+        background-color: #0061c9;
+    }
   } 
 
 .title {
-    font-size: 4rem; /* Adjust the size as needed */
-    margin-bottom: 20px; /* Add spacing below the title */
-    color: #007bff; /* Text color for the title */
+    font-size: 4rem; 
+    margin-bottom: 10px; 
+    color: #007bff; 
   }
