--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .button {
-    @apply bg-[#b91c1c] py-2 px-4 rounded-full text-white text-lg font-semibold hover:opacity-80 duration-200
+    @apply bg-[#007bff] py-2 px-4 rounded-full text-white text-lg font-semibold hover:opacity-80 duration-200
   }
 }
 
