--- a/src/login.css
+++ b/src/login.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(255, 255, 255);
+    background-color: #20212c;
 }
 
 .login-page {
@@ -18,10 +18,10 @@ body {
 }
 
 .login-container {
-    width: 400px;
-    margin: 30px auto 0;
+    width: 500px;
+    margin: 100px auto 0;
     padding: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid #007bff;
     border-radius: 5px;
     background-color: #f8f8f8;
     display: flex;
@@ -64,6 +64,17 @@ button {
 
 .title {
     font-size: 4rem; 
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin-bottom: 10px; 
     color: #007bff; 
+  }
+
+  footer {
+    background-color: #007bff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    color: #fff; /* Set your desired text color */
+    padding: 10px; /* Adjust padding as needed */
+    text-align: center;
   }
