--- a/src/login.css
+++ b/src/login.css
@@ -23,7 +23,7 @@ body {
     padding: 20px;
     border: 2px solid #007bff;
     border-radius: 5px;
-    background-color: #f8f8f8;
+    background-color: #aeaeae;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,7 +70,7 @@ button {
   }
 
   footer {
-    background-color: #007bff;
+    background-color: #2b2c37;
     position: fixed;
     bottom: 0;
     width: 100%;
