--- a/src/createAccount.css
+++ b/src/createAccount.css
@@ -2,7 +2,7 @@ body {
     background-color: #20212c;
 }
 
-.login-page {
+.createAccount-page {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +17,7 @@ body {
 
 }
 
-.login-container {
+.create-account-container {
     width: 500px;
     margin: 100px auto 0;
     padding: 20px;
@@ -74,15 +74,7 @@ button {
     position: fixed;
     bottom: 0;
     width: 100%;
-    color: #fff;
-    padding: 10px;
+    color: #fff; /* Set your desired text color */
+    padding: 10px; /* Adjust padding as needed */
     text-align: center;
-  }
-
-  a {
-    color: blue;
-  }
-
-  p {
-    font-size: 15px;
   }
