--- a/src/createAccount.css
+++ b/src/createAccount.css
@@ -17,13 +17,20 @@ body {
 
 }
 
+.center {
+  text-align: center;
+  margin: 30px auto 0;
+  height: 100px;
+  width: 100px;
+}
+
 .create-account-container {
     width: 500px;
-    margin: 100px auto 0;
+    margin: 65px auto 0;
     padding: 20px;
     border: 2px solid #007bff;
     border-radius: 5px;
-    background-color: #f8f8f8;
+    background-color: #aeaeae;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,11 +77,11 @@ button {
   }
 
   footer {
-    background-color: #007bff;
+    background-color: #2b2c37;
     position: fixed;
     bottom: 0;
     width: 100%;
-    color: #fff; /* Set your desired text color */
-    padding: 10px; /* Adjust padding as needed */
+    color: #fff;
+    padding: 10px;
     text-align: center;
   }
